[gd_scene load_steps=24 format=3 uid="uid://ccvnh6rsvebpi"]

[ext_resource type="Script" path="res://enemies/bullet.gd" id="1_ufdes"]
[ext_resource type="Script" path="res://hitbox.gd" id="2_xoojo"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qwteq"]
radius = 1.5
height = 7.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ussiw"]
shading_mode = 0
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6ktvd"]
material = SubResource("StandardMaterial3D_ussiw")
radius = 1.5
height = 7.5

[sub_resource type="Curve" id="Curve_4u7nc"]
_data = [Vector2(2.08165e-12, 1), 0.0, 0.0, 0, 0, Vector2(1, 2.08165e-12), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_jf7iu"]
curve = SubResource("Curve_4u7nc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xrj05"]
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.5
emission_ring_radius = 1.5
emission_ring_inner_radius = 0.0
direction = Vector3(2.08165e-12, 2.08165e-12, -1)
spread = 0.0
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
initial_velocity_min = 3.0
initial_velocity_max = 3.0
scale_curve = SubResource("CurveTexture_jf7iu")
color = Color(1, 1, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5ebfw"]
shading_mode = 0
vertex_color_use_as_albedo = true
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_dkhmu"]
material = SubResource("StandardMaterial3D_5ebfw")
size = Vector2(0.7, 0.7)

[sub_resource type="Curve" id="Curve_808oc"]
_data = [Vector2(2.08165e-12, 1), 0.0, 0.0, 0, 0, Vector2(1, 2.08165e-12), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_li67g"]
curve = SubResource("Curve_808oc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_b6f3m"]
direction = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
spread = 180.0
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
initial_velocity_min = 10.0
initial_velocity_max = 10.0
scale_curve = SubResource("CurveTexture_li67g")
color = Color(1, 1, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ltbnc"]
shading_mode = 0
vertex_color_use_as_albedo = true
billboard_mode = 1
billboard_keep_scale = true

[sub_resource type="QuadMesh" id="QuadMesh_tv0gd"]
material = SubResource("StandardMaterial3D_ltbnc")
size = Vector2(0.8, 0.8)

[sub_resource type="Gradient" id="Gradient_pxy1r"]
colors = PackedColorArray(2, 1, 0, 0.780392, 1, 1, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3eggs"]
gradient = SubResource("Gradient_pxy1r")

[sub_resource type="Curve" id="Curve_tk1bb"]
_data = [Vector2(2.08165e-12, 2.08165e-12), 0.0, 1.0, 0, 1, Vector2(1, 1), 1.0, 0.0, 1, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_jw4rf"]
curve = SubResource("Curve_tk1bb")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_anu2t"]
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
scale_curve = SubResource("CurveTexture_jw4rf")
color = Color(1.5, 1.5, 0, 1)
color_ramp = SubResource("GradientTexture1D_3eggs")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_63v3o"]
transparency = 4
shading_mode = 0
vertex_color_use_as_albedo = true
disable_receive_shadows = true

[sub_resource type="SphereMesh" id="SphereMesh_cik5v"]
material = SubResource("StandardMaterial3D_63v3o")
radius = 5.0
height = 10.0

[sub_resource type="SphereShape3D" id="SphereShape3D_5r448"]
radius = 6.0

[node name="EnemyMegaBullet" type="Node3D"]
script = ExtResource("1_ufdes")
max_lifetime_secs = 5.0
bullet_explosion_secs = 1.5

[node name="EnemyHitbox" type="Area3D" parent="."]
transform = Transform3D(0.999999, -6.97573e-16, -1.52459e-23, -1.52459e-23, -4.37113e-08, 0.999999, -6.97573e-16, -0.999999, -4.37113e-08, 2.08165e-12, 2.08165e-12, 2.08165e-12)
collision_layer = 8
collision_mask = 18
script = ExtResource("2_xoojo")
damage = 15

[node name="HitboxCollider" type="CollisionShape3D" parent="EnemyHitbox"]
transform = Transform3D(1, 3.43163e-23, 1.38451e-30, -4.56788e-23, 1, -2.84085e-15, 1.02612e-30, 1.89344e-15, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_qwteq")

[node name="BulletMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, -6.97574e-16, -1.5246e-23, -1.5246e-23, -4.37114e-08, 1, -6.97574e-16, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CapsuleMesh_6ktvd")

[node name="TailParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 2.08165e-12, 2.08165e-12, 4.39202)
amount = 5
lifetime = 0.3
local_coords = true
process_material = SubResource("ParticleProcessMaterial_xrj05")
draw_pass_1 = SubResource("QuadMesh_dkhmu")

[node name="ExplodeParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, -3.75)
emitting = false
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_b6f3m")
draw_pass_1 = SubResource("QuadMesh_tv0gd")

[node name="ExplosionBall" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, -4)
cast_shadow = 0
emitting = false
amount = 1
lifetime = 0.4
one_shot = true
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_anu2t")
draw_pass_1 = SubResource("SphereMesh_cik5v")

[node name="ExplosionHitboxPivot" type="Node3D" parent="."]

[node name="EnemyHitbox" type="Area3D" parent="ExplosionHitboxPivot"]
collision_layer = 8
collision_mask = 18
script = ExtResource("2_xoojo")
damage = 30

[node name="HitboxCollider" type="CollisionShape3D" parent="ExplosionHitboxPivot/EnemyHitbox"]
shape = SubResource("SphereShape3D_5r448")

[connection signal="body_entered" from="EnemyHitbox" to="." method="_on_body_entered" flags=18]
